[ADD] Footer to contacto.html and fix overflow-y

--- a/CSS/contacto.css
+++ b/CSS/contacto.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-
+    overflow-y: hidden;
 }
 
 .main {
@@ -136,4 +136,55 @@ button {
 
 button:hover {
     background-color: #333;
+}
+
+/* footer */
+.footer {
+    display: flex;
+    flex-direction: row;
+    flex-flow: row-reverse;
+    font-family: "Ubuntu", sans-serif;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    background-color: black;
+    position: fixed;
+    bottom: 0;
+}
+
+.iconsSocialMedia {
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+    margin: 0;
+}
+
+.iconsSocialMedia li {
+    margin: 5px 10px;
+
+}
+
+.iconsSocialMedia img {
+    border-radius: 2rem;
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+    padding: 3px;
+    width: 25px;
+}
+
+.copyright p {
+    padding: 10px;
+    color: white;
+}
+
+.textContent h2 {
+    font-size: 70px;
+    color: black;
+}
+
+.textContent p {
+
+    color: black;
+    font-size: 19px;
 }
